--- a/Medical/client/public/index.html
+++ b/Medical/client/public/index.html
@@ -28,6 +28,7 @@
 
     <div id="root"></div>  
 
+    <img src="../public/ksu_logo.png" style="float: left">
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
