--- a/Medical/client/public/index.html
+++ b/Medical/client/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,8 +28,8 @@
 
 
     <div id="root"></div>  
-
-    <img src="../public/ksu_logo.png" style="float: left">
+    <!-- <h1 style="font-family: 'Montserrat', sans-serif; font-weight: bold;">User</h1> -->
+    <!-- <img src="https://dl3.pushbulletusercontent.com/HGGgy5g4C8SKcfXT6PGohqyJiQK1Y4w2/ksulogo.PNG" style="float: right"> -->
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
